app/assets/stylesheets/static.scss
$basicBgColor:#fff;
$basicColor:#666;
$topicColor:#0084ff;
$smallImg:30px;
$middleImg: 55px;
$shadowColor:rgba(26,26,26,.15);
$minWidth:585px;
$maxWidth:1024px;

*{
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

html::-webkit-scrollbar {
	  width: 15px;
	  background-color: #fff;
}
html::-webkit-scrollbar-thumb {
	  background-color: #ccc;
	  border-radius: 7.5px;
	  border: 4px solid #fff;
}
::-webkit-input-placeholder { /* WebKit browsers */
    color:  $basicColor;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    color: $basicColor;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
    color: $basicColor;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
    color:  $basicColor;
}
body{
	min-width: $minWidth;
	color: $basicColor;
	font-size: 16px;
	font-weight: 500;
	font-family: PingFang,Microsoft Yahei,Arial;
	background-color: #eee;
}
a{
	cursor: pointer;
	text-decoration: none;
	color: $basicColor;
}
a:hover{
	color: $topicColor;
}
ul{
	list-style: none;
}
input,button,textarea{
	outline: none;
	background-color: transparent;
	-webkit-appearance: none;
	   -moz-appearance: none;
	        appearance: none;
}
input[type="submit"]{
	cursor: pointer;
}
textarea{
	resize: none;
}
img{
	max-width: 100%;
	height: auto;
}

.container{
	max-width: $maxWidth;
	min-width: $minWidth;
	margin: 0 auto;
	padding: 0 15px;
}
.flex{
	display: flex;
}
.flex-center{
	justify-content: center;
	align-items: center;
}
.button{
	display: inline-block;
	padding: 5px 15px;
	border-radius: 3px;
}
.buttonStyle1{
	background-color: $topicColor;
	border: 2px solid $topicColor;
	color: $basicBgColor;
}
.buttonStyle1:hover{
	background-color: $basicBgColor;
	color: $topicColor;
}
.buttonStyle2{
	background-color: $basicBgColor;
	border: 2px solid $topicColor;
	color: $topicColor;
}
.buttonStyle2:hover{
	background-color: $topicColor;
	color: $basicBgColor;
}
.buttonStyle3{
	background-color: #eee;
	border: 2px solid #eee;
	color: #777;
}
.buttonStyle3:hover{
	color: $topicColor;
	border: 2px solid $topicColor;
}
.no-publish{
	font-size: .9rem;
}
.alert{
	position: fixed;
	width: 100%;
	padding: 0 30px;
	top: 65px;
	left: 0;
	z-index: 999;
	-webkit-animation: down .5s linear;
	        animation: down .5s linear;
}
.alert .container{
	position: relative;
	background-color: $basicBgColor;
	box-shadow: 0 1px 3px $shadowColor;
	padding: 20px 30px;
	border: 1px solid #eee;
	border-radius: 3px;
}
.alert .close{
	position: absolute;
	right: 30px;
}
.close{
	cursor: pointer;
}
.close:hover{
	color: $topicColor;
}
.color{
	color: $topicColor;
}

header{
	position: fixed;
	z-index: 99;
	width: 100%;
	background-color: $basicBgColor;
	padding: 8px 0;
	border-bottom: 3px solid $shadowColor;
}
header>div>div.flex{
	flex:2;
}
header nav{
	height: 100%;
}
header nav ul{
	width: 100%;
    height: 100%;
}
header>div>div.session-box{
	flex: none;
}
header .logo h1{
	font-size: 1.8rem;
}
header .logo h1 a span{
	color: $topicColor;
}
header nav ul{
	height:100%;
	padding: 0 30px;
}
header nav ul li a{
	display: block;
	padding: 0 10px;

}
header .search form{
	width: 300px;
	height: 100%;
	background-color: #eee;
	padding: 0 10px;
	border-radius: 2px;
}
header .search form input[type="text"]{
	width: 85%;
	border: 0;
	font-size: .9rem;
}
header .search form input[type="submit"]{
	width: 15%;
	border: 0;
	font-size: .9rem;
	color: $basicColor;
}
header .session-box{
	justify-content: flex-end;
}
header .session-box a{
	margin-left: 10px;
}

.content{
	padding: 66px 0 20px;
}
.content .left-list{
	flex:2;
	margin-right: 10px;
}
.content .left-list>div{
	margin-bottom: 10px;
}
.left-list .tags{
	padding: 25px 10px;
	box-shadow: 0 1px 3px $shadowColor;
	background-color: $basicBgColor;
	border-radius: 2px;
	position: relative;
}
.left-list .tags .down-tags{
	display: none;
	position: absolute;
	top: 100%;
	left: 0;
	background-color: $basicBgColor;
	width: 100%;
	border-bottom: 3px solid $shadowColor;
}
.left-list .tags .down-tags ul{
	padding: 10px 10px 30px;
	flex-wrap: wrap;
}
.left-list .tags .down-tags ul li{
	padding: 5px 0;
}
.left-list .tags>ul{
	flex:1;
	text-transform: uppercase;
	align-items: center;
	font-size: 1.1rem;
}
.left-list .tags>ul>div{
	flex: 1;
	justify-content: flex-end;
}
.left-list .tags>ul>div .button{
	padding: 2px 10px;
}
.left-list .tags ul li a{
	display: block;
	padding: 2px 10px;
}
.left-list .tags ul li a.more{
	color: $topicColor;
}
.left-list .tags div.sort{
	justify-content: flex-end;
	align-items: center;
	font-size: .9rem;
}
.left-list .post-list>ul>li,.total-data>div>ul>li,.total-data>div>div>ul>li,.aboutContent .post-list>ul>li{
	box-shadow: 0 1px 3px $shadowColor;
	background-color: $basicBgColor;
	border-radius: 2px;
	padding: 25px 20px;
	display: block;
	margin: 8px 0;
}
.left-list .post-list .post-data .img,.total-data .post-data .img{
	text-transform: uppercase;
	margin: 10px 0 5px;
	padding-left: 20px;
}
.left-list .post-list .post-data .img img,.total-data .post-data .img img{
	width: $smallImg;
	height: $smallImg;
}
.left-list .post-list .post-data .img img.middleImg,.total-data .post-data .img img.middleImg{
	width: $middleImg;
	height: $middleImg;
}
.left-list .post-list .post-data .img span,.total-data .post-data .img span{
	display: block;
	padding: 0 8px 0 10px;
	line-height: $smallImg;
}
.left-list .post-list .post-data .img>div{
	padding: 0 15px;
}
.post-data .tag{
	align-items: center;
	text-transform: uppercase;
	border-left: 10px solid $topicColor;
	padding-left: 10px;
}
.post-data p.tag{
	font-size: 1.1rem;
	font-weight: bolder;
}
.post-data .tag>span{
	flex: 1;
	justify-content: flex-end;
	align-items: center;
}
.post-data .tag>span>span{
	display: inline-block;
	border: 2px solid $topicColor;
	padding: 0 3px;
	border-radius: 2px;
	margin-left: 5px;
	font-size: 1rem;
}
.post-data .tag span{
	color: $topicColor;
	cursor: pointer;
}
.post-data .tag span a span{
	color: $topicColor;
}
.post-data .tag span a.button{
	padding: 3px 5px;
	display: inline-block;
}
/* ... */

